# svgbuilder

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-09-enginegen.md  2026-06-09-svgbuilder-stage1-core.md  2026-06-09-svgbuilder-stage2-autotune.md  2026-06-09-svgbuilder-stage3-llm-refine.md
docs/superpowers/specs/: 2026-06-09-enginegen-design.md  2026-06-09-svgbuilder-image-to-svg-design.md
src/svgbuilder/: autotune.py  cli.py  llm_refine.py  preprocess.py  presets.py  vectorize.py
src/svgbuilder/enginegen/: __init__.py  cli.py  exemplars.py  extract_svg.py  generate.py  loop.py  render.py  util.py  validate.py
src/svgbuilder/enginegen/style/: conventions.md
tests/: test_autotune.py  test_cli.py  test_enginegen.py  test_llm_refine.py  test_preprocess.py  test_presets.py  test_vectorize.py
