[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svgbuilder"
version = "0.1.0"
description = "Convert a raster image into a clean, simplified colored SVG."
readme = "README.md"
license = { text = "MIT" }
# Upper bound: vtracer 0.6.15's cp314 wheel segfaults when any tuning
# parameter is passed (pyo3/Python 3.14 bug), so 3.14 is unsupported.
requires-python = ">=3.10,<3.14"
authors = [{ name = "nitzanwilnai" }]
dependencies = [
    "vtracer>=0.6.15",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
auto = [
    "resvg-py>=0.1.5",
    "cairosvg>=2.7",          # fallback renderer if resvg is unavailable
    "scikit-image>=0.21",
    "numpy>=1.24",
]
llm = [
    "anthropic>=0.40",
]

[project.scripts]
svgbuilder = "svgbuilder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/svgbuilder"]
